--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "react-notify-toast-mobile-fix",
   "title": "React Notify Toast",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Toast notifications for React.js with support for mobile devices",
-  "keywords": ["react", "toast", "notification", "component", "notify"],
+  "keywords": [
+    "react",
+    "toast",
+    "notification",
+    "component",
+    "notify"
+  ],
   "author": "Jesús Otero <hello@jesusoterogomez.com>",
   "main": "bin/notify.js",
   "license": "MIT",
@@ -28,6 +34,7 @@
   },
   "dependencies": {
     "object-assign": "^3.0.0",
+    "prop-types": "^15.6.0",
     "react": "^0.14.7 || ^15.0.0",
     "react-dom": "^0.14.7 || ^15.0.0"
   }
